samples/_failures_safe/1761665776_52c3d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_167cc6f4.c: In function ‘main’:
./samples/SAFE/__tmp_167cc6f4.c:163:5: error: expected expression at end of input
  163 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_167cc6f4.c:163:5: error: expected declaration or statement at end of input
